Bug 27057 - [4.0 Regression] ICE with -feliminate-dwarf2-dups and using namespace
Summary: [4.0 Regression] ICE with -feliminate-dwarf2-dups and using namespace
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.1.1
: P3 normal
Target Milestone: 4.1.2
Assignee: Jakub Jelinek
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2006-04-06 12:32 UTC by Jakub Jelinek
Modified: 2007-02-03 16:49 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 3.4.0 4.1.0 4.2.0
Known to fail: 4.0.3
Last reconfirmed: 2006-04-06 13:14:56


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakub Jelinek 2006-04-06 12:32:15 UTC
// { dg-do compile }
// { dg-options "-g -feliminate-dwarf2-dups" }

namespace N
{
}

struct A
{
  void foo ();
};

void A::foo ()
{
  using namespace N;
}

ICEs with gcc-4_{0,1}-branch and HEAD in build_abbrev_table, as DW_TAG_namespace
die that is being referenced doesn't have die_symbol.
Comment 1 Jakub Jelinek 2006-04-10 13:18:27 UTC
Subject: Bug 27057

Author: jakub
Date: Mon Apr 10 13:18:19 2006
New Revision: 112820

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=112820
Log:
	PR debug/27057
	* dwarf2out.c (is_symbol_die): Return true also for namespaces.

	* g++.dg/debug/dwarf2-2.C: New test.

Added:
    trunk/gcc/testsuite/g++.dg/debug/dwarf2-2.C
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/dwarf2out.c
    trunk/gcc/testsuite/ChangeLog

Comment 2 Jakub Jelinek 2006-04-10 13:21:21 UTC
Subject: Bug 27057

Author: jakub
Date: Mon Apr 10 13:21:13 2006
New Revision: 112821

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=112821
Log:
	PR debug/27057
	* dwarf2out.c (is_symbol_die): Return true also for namespaces.

	* g++.dg/debug/dwarf2-2.C: New test.

Added:
    branches/gcc-4_1-branch/gcc/testsuite/g++.dg/debug/dwarf2-2.C
Modified:
    branches/gcc-4_1-branch/gcc/ChangeLog
    branches/gcc-4_1-branch/gcc/dwarf2out.c
    branches/gcc-4_1-branch/gcc/testsuite/ChangeLog

Comment 3 Gabriel Dos Reis 2007-02-03 16:49:10 UTC
Fixed inGCC-4.1.x