	PR debug/27057 	* dwarf2out.c (is_symbol_die): Return true also for namespaces.

* g++.dg/debug/dwarf2-2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@112820 138bc75d-0d04-0410-961f-82ee72b054a4